--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -12,6 +12,11 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
+.large-text {
+    font-size: 2rem; /* Ajusta el tamaño según sea necesario */
+}
+
+
 #permisos-group ul {
   list-style-type: none;
   padding-left: 20px;
